[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["HamzaAhmad97 <h.radiahmad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.3"
jupyterlab = "^3.2.1"
pandas = "^1.3.4"
sklearn = "^0.0"
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
